salesforce/force-app/main/default/objects/Opportunity/fields/Re_Engagement_Reason_Details__c.field-meta.xml
<CustomField>
    <fullName>Re_Engagement_Reason_Details__c</fullName>
    <description>Details expanding upon the Re-Engagement Reason.</description>
    <inlineHelpText>Details expanding upon the Re-Engagement Reason.</inlineHelpText>
    <label>Re-Engagement Reason Details</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>