salesforce/force-app/main/default/objects/Opportunity/fields/Restrictive_Covenants__c.field-meta.xml
<CustomField>
    <fullName>Restrictive_Covenants__c</fullName>
    <label>Restrictive Covenants</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Non-Compete</fullName>
            </value>
            <value>
                <fullName>Non-Solicit</fullName>
            </value>
            <value>
                <fullName>Non-Compete + Non-Solicit</fullName>
            </value>
            <value>
                <fullName>Other Restrictive Covenants</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>