salesforce/force-app/main/default/objects/Opportunity/fields/Revenue_Aggregation__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Aggregation__c</fullName>
    <description>Whether revenue is counted individually or pooled with the advisor&apos;s team for tier determination.</description>
    <inlineHelpText>Whether revenue is counted individually or pooled with the advisor&apos;s team for tier determination. Values: Individual, Team.</inlineHelpText>
    <label>Revenue Aggregation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>