salesforce/force-app/main/default/objects/Opportunity/fields/Sales_Cycle_Time_Opp_to_Joined__c.field-meta.xml
<CustomField>
    <fullName>Sales_Cycle_Time_Opp_to_Joined__c</fullName>
    <formula>Advisor_Join_Date__c -  DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Cycle Time (Opp to Joined)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>