salesforce/force-app/main/default/objects/Opportunity/fields/Sales_Cycle_Time_Opp_to_Sales_Process__c.field-meta.xml
<CustomField>
    <fullName>Sales_Cycle_Time_Opp_to_Sales_Process__c</fullName>
    <formula>DATEVALUE(Stage_Entered_Sales_Process__c) - DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Cycle Time - Opp to Sales Process</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>