salesforce/force-app/main/default/objects/Opportunity/fields/Savvy_Advisor_ID__c.field-meta.xml
<CustomField>
    <fullName>Savvy_Advisor_ID__c</fullName>
    <description>The Savvy Advisor ID in the Savvy advisor database, used to sync data to this Salesforce from the advisor database.</description>
    <label>Savvy Advisor ID</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>