salesforce/force-app/main/default/objects/Opportunity/fields/SGA__c.field-meta.xml
<CustomField>
    <fullName>SGA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The SGA supporting this opportunity (or SGM if self-sourced).</description>
    <inlineHelpText>The SGA supporting this opportunity (or SGM if self-sourced).</inlineHelpText>
    <label>SGA</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>