salesforce/force-app/main/default/objects/Opportunity/fields/SGA_Reported_AUM__c.field-meta.xml
<CustomField>
    <fullName>SGA_Reported_AUM__c</fullName>
    <description>The Estimated Transferrable AUM from the Prospect.</description>
    <inlineHelpText>The Estimated Transferrable AUM from the Prospect</inlineHelpText>
    <label>SGA Reported AUM</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>