salesforce/force-app/main/default/objects/Opportunity/fields/SGM_Estimated_ARR__c.field-meta.xml
<CustomField>
    <fullName>SGM_Estimated_ARR__c</fullName>
    <description>The estimated ARR of the advisor before underwriting as inputted by the SGM.</description>
    <inlineHelpText>The estimated ARR of the advisor before underwriting as inputted by the SGM.</inlineHelpText>
    <label>SGM Estimated ARR</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>