salesforce/force-app/main/default/objects/Opportunity/fields/SGM_reengagement__c.field-meta.xml
<CustomField>
    <fullName>SGM_reengagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SGM for re-engagement</description>
    <label>SGM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_for_reengage</relationshipName>
    <type>Lookup</type>
</CustomField>