salesforce/force-app/main/default/objects/Opportunity/fields/Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address__c</fullName>
    <description>The shipping of address of the advisor, primarily to send them a laptop and any other Savvy goods.</description>
    <inlineHelpText>The shipping of address of the advisor, primarily to send them a laptop and any other Savvy goods.</inlineHelpText>
    <label>Shipping Address</label>
    <type>TextArea</type>
</CustomField>