salesforce/force-app/main/default/objects/Opportunity/fields/Source_Re_Engagement_Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>Source_Re_Engagement_Opportunity_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the Recruiting opportunity back to the Re-Engagement opportunity it came from</description>
    <label>Source Re-Engagement Opportunity ID</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Resulting Recruiting Opportunities</relationshipLabel>
    <relationshipName>Resulting_Recruiting_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>