salesforce/force-app/main/default/objects/Opportunity/fields/Split_Kicker__c.field-meta.xml
<CustomField>
    <fullName>Split_Kicker__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the advisor&apos;s split change if they hit a certain ARR goal?</description>
    <inlineHelpText>Does the advisor&apos;s split change if they hit a certain ARR goal?</inlineHelpText>
    <label>Split Kicker?</label>
    <type>Checkbox</type>
</CustomField>