salesforce/force-app/main/default/objects/Opportunity/fields/Split_Kicker_Advisor_Take_Rate__c.field-meta.xml
<CustomField>
    <fullName>Split_Kicker_Advisor_Take_Rate__c</fullName>
    <description>The new advisor take rate with a kicker in effect. If a waterfall, list the first non-standard rate on the waterfall.</description>
    <inlineHelpText>The new advisor take rate with a kicker in effect. If a waterfall, list the first non-standard rate on the waterfall.</inlineHelpText>
    <label>Split Kicker Advisor Take Rate</label>
    <precision>5</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>