salesforce/force-app/main/default/objects/Opportunity/fields/Split_Kicker_ARR_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Split_Kicker_ARR_Threshold__c</fullName>
    <description>The annual book recurring revenue required to change the advisor split (if a split kicker is in place).</description>
    <inlineHelpText>The annual book recurring revenue required to change the advisor split (if a split kicker is in place).</inlineHelpText>
    <label>Split Kicker ARR Threshold</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>