salesforce/force-app/main/default/objects/Opportunity/fields/Split_Kicker_Duration_months__c.field-meta.xml
<CustomField>
    <fullName>Split_Kicker_Duration_months__c</fullName>
    <description>The duration of months the split kicker is in place (if only a temporary split). Leave blank if this exists in perpetuity.</description>
    <inlineHelpText>The duration of months the split kicker is in place (if only a temporary split). Leave blank if this exists in perpetuity.</inlineHelpText>
    <label>Split Kicker Duration (months)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>