salesforce/force-app/main/default/objects/Opportunity/fields/Split_Kicker_Notes__c.field-meta.xml
<CustomField>
    <fullName>Split_Kicker_Notes__c</fullName>
    <description>Any additional information on the kicker split within the advisor agreement.</description>
    <label>Split Kicker Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>