salesforce/force-app/main/default/objects/Opportunity/fields/SQL__c.field-meta.xml
<CustomField>
    <fullName>SQL__c</fullName>
    <label>SQO</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>