salesforce/force-app/main/default/objects/Opportunity/fields/Stage_Before_Closed_or_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Stage_Before_Closed_or_Conversion__c</fullName>
    <label>Stage Before Closed or Conversion</label>
    <length>50</length>
    <type>Text</type>
</CustomField>