salesforce/force-app/main/default/objects/Opportunity/fields/Stage_Entered_Call_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Stage_Entered_Call_Scheduled__c</fullName>
    <description>Tracks when re-engagement enters Stage Entered Call Scheduled</description>
    <label>Stage Entered Call Scheduled</label>
    <type>DateTime</type>
</CustomField>