salesforce/force-app/main/default/objects/Opportunity/fields/Stage_Entered_Closed__c.field-meta.xml
<CustomField>
    <fullName>Stage_Entered_Closed__c</fullName>
    <label>Stage Entered Closed</label>
    <type>DateTime</type>
</CustomField>