salesforce/force-app/main/default/objects/Opportunity/fields/Stage_Entered_Discovery__c.field-meta.xml
<CustomField>
    <fullName>Stage_Entered_Discovery__c</fullName>
    <label>Stage Entered Discovery</label>
    <type>DateTime</type>
</CustomField>