salesforce/force-app/main/default/objects/Opportunity/fields/Stage_Entered_Engaged__c.field-meta.xml
<CustomField>
    <fullName>Stage_Entered_Engaged__c</fullName>
    <description>Tracks when Stage Entered Engaged</description>
    <label>Stage Entered Engaged</label>
    <type>DateTime</type>
</CustomField>