salesforce/force-app/main/default/objects/Opportunity/fields/Stage_Entered_Joined__c.field-meta.xml
<CustomField>
    <fullName>Stage_Entered_Joined__c</fullName>
    <label>Stage Entered Joined</label>
    <type>DateTime</type>
</CustomField>