salesforce/force-app/main/default/objects/Opportunity/fields/Stage_Entered_Negotiating__c.field-meta.xml
<CustomField>
    <fullName>Stage_Entered_Negotiating__c</fullName>
    <label>Stage Entered Negotiating</label>
    <type>DateTime</type>
</CustomField>