salesforce/force-app/main/default/objects/Opportunity/fields/Stage_Entered_On_Hold__c.field-meta.xml
<CustomField>
    <fullName>Stage_Entered_On_Hold__c</fullName>
    <label>Stage Entered On Hold</label>
    <type>DateTime</type>
</CustomField>