salesforce/force-app/main/default/objects/Opportunity/fields/Stage_Entered_Outreach__c.field-meta.xml
<CustomField>
    <fullName>Stage_Entered_Outreach__c</fullName>
    <description>Tracks when re-engagement enters Stage Entered Outreach</description>
    <label>Stage Entered Outreach</label>
    <type>DateTime</type>
</CustomField>