salesforce/force-app/main/default/objects/Opportunity/fields/Stage_Entered_Planned_Nurture__c.field-meta.xml
<CustomField>
    <fullName>Stage_Entered_Planned_Nurture__c</fullName>
    <description>Tracks when the opp entered the Planned Nurture stage</description>
    <label>Stage Entered Planned Nurture</label>
    <type>DateTime</type>
</CustomField>