salesforce/force-app/main/default/objects/Opportunity/fields/Stage_Entered_Re_Engaged__c.field-meta.xml
<CustomField>
    <fullName>Stage_Entered_Re_Engaged__c</fullName>
    <description>Tracks when Re-engagement opp enters Stage Entered Re Engaged</description>
    <label>Stage Entered Re Engaged</label>
    <type>DateTime</type>
</CustomField>