salesforce/force-app/main/default/objects/Opportunity/fields/Stage_Entered_Sales_Process__c.field-meta.xml
<CustomField>
    <fullName>Stage_Entered_Sales_Process__c</fullName>
    <label>Stage Entered Sales Process</label>
    <type>DateTime</type>
</CustomField>