salesforce/force-app/main/default/objects/Opportunity/fields/Stage_Entered_Signed__c.field-meta.xml
<CustomField>
    <fullName>Stage_Entered_Signed__c</fullName>
    <label>Stage Entered Signed</label>
    <type>DateTime</type>
</CustomField>