salesforce/force-app/main/default/objects/Opportunity/fields/Start_of_Week__c.field-meta.xml
<CustomField>
    <fullName>Start_of_Week__c</fullName>
    <formula>CASE(
MOD( DATEVALUE(CreatedDate) - DATE( 1900, 1, 7 ), 7 ),
0, DATEVALUE(CreatedDate) - 2,
1, DATEVALUE(CreatedDate) - 3,
2, DATEVALUE(CreatedDate) - 4,
3, DATEVALUE(CreatedDate) - 5,
4, DATEVALUE(CreatedDate) - 6,
5, DATEVALUE(CreatedDate),
DATEVALUE(CreatedDate) - 1
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start of Week</label>
    <type>Date</type>
</CustomField>