salesforce/force-app/main/default/objects/Opportunity/fields/Target_Re_Engagement_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Re_Engagement_Date__c</fullName>
    <description>The timeline by which we want to re-open a Recruiting Opportunity</description>
    <inlineHelpText>The timeline by which we want to re-open a Recruiting Opportunity</inlineHelpText>
    <label>Target Re-Engagement Date</label>
    <type>Date</type>
</CustomField>