salesforce/force-app/main/default/objects/Opportunity/fields/Tier_2_Max_ARR__c.field-meta.xml
<CustomField>
    <fullName>Tier_2_Max_ARR__c</fullName>
    <description>Upper ARR bound for Tier 2.</description>
    <inlineHelpText>Upper ARR bound for Tier 2.</inlineHelpText>
    <label>Tier 2 Max ARR</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>