salesforce/force-app/main/default/objects/Opportunity/fields/Tier_3_Max_ARR__c.field-meta.xml
<CustomField>
    <fullName>Tier_3_Max_ARR__c</fullName>
    <description>Upper ARR bound for Tier 3.</description>
    <inlineHelpText>Upper ARR bound for Tier 3.</inlineHelpText>
    <label>Tier 3 Max ARR</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>