salesforce/force-app/main/default/objects/Opportunity/fields/Tier_4_Split__c.field-meta.xml
<CustomField>
    <fullName>Tier_4_Split__c</fullName>
    <description>Revenue share percentage for Tier 4 ARR range.</description>
    <inlineHelpText>Revenue share percentage for Tier 4 ARR range.</inlineHelpText>
    <label>Tier 4 Split</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>