salesforce/force-app/main/default/objects/Opportunity/fields/To_be_Qualified__c.field-meta.xml
<CustomField>
    <fullName>To_be_Qualified__c</fullName>
    <formula>IF(ISPICKVAL(StageName,&quot;Qualified&quot;),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>To be Qualified</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>