salesforce/force-app/main/default/objects/Opportunity/fields/Total_Annual_Recurring_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Total_Annual_Recurring_Expenses__c</fullName>
    <description>The sum of the total annual recurring non-standard expenses given to an advisor.</description>
    <label>Total Annual Recurring Expenses_Standard</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>