salesforce/force-app/main/default/objects/Opportunity/fields/Total_Annual_Recurring_Expenses_OneOff__c.field-meta.xml
<CustomField>
    <fullName>Total_Annual_Recurring_Expenses_OneOff__c</fullName>
    <description>The sum of the total annual recurring non-standard expenses given to an advisor in a one-off year.</description>
    <label>Total Annual Recurring Expenses_OneOff</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>