salesforce/force-app/main/default/objects/Opportunity/fields/Total_Open_Opp_in_Account__c.field-meta.xml
<CustomField>
    <fullName>Total_Open_Opp_in_Account__c</fullName>
    <formula>Account.More_than_1_Open_Opp__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Open Opp in Account</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>