salesforce/force-app/main/default/objects/Opportunity/fields/Transferability_Probability__c.field-meta.xml
<CustomField>
    <fullName>Transferability_Probability__c</fullName>
    <description>The probability that the prospect&apos;s transferable AUM actually would move with them if they were to change firms. Note that this only applies to their estimated transferable AUM, not their total AUM.</description>
    <inlineHelpText>The probability that the prospect&apos;s transferable AUM actually would move with them if they were to change firms. Note that this only applies to their estimated transferable AUM, not their total AUM.</inlineHelpText>
    <label>Transferability Probability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Transferability_Probability</valueSetName>
    </valueSet>
</CustomField>