salesforce/force-app/main/default/objects/Opportunity/fields/Underwriting_Doc_URL__c.field-meta.xml
<CustomField>
    <fullName>Underwriting_Doc_URL__c</fullName>
    <description>The Underwriting document Google Sheets URL.</description>
    <label>Underwriting Doc URL</label>
    <type>Url</type>
</CustomField>