salesforce/force-app/main/default/objects/Opportunity/fields/Underwritten_ARR__c.field-meta.xml
<CustomField>
    <fullName>Underwritten_ARR__c</fullName>
    <description>The Underwritten ARR of the deal as based on the UW AUM and Estimated Client Fee.</description>
    <formula>IF(OR(ISBLANK(Underwritten_AUM__c), ISBLANK(Estimated_Average_Client_Fee__c)), null, Underwritten_AUM__c * Estimated_Average_Client_Fee__c)</formula>
    <inlineHelpText>The Underwritten ARR of the deal as based on the UW AUM and Estimated Client Fee.</inlineHelpText>
    <label>Underwritten ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>