salesforce/force-app/main/default/objects/Opportunity/fields/Underwritten_AUM__c.field-meta.xml
<CustomField>
    <fullName>Underwritten_AUM__c</fullName>
    <description>The AUM Savvy is underwriting based on what the Prospect believes is transferable.</description>
    <label>Underwritten AUM</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>