salesforce/force-app/main/default/objects/Opportunity/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The previous Recruiting Opportunity owner.</description>
    <inlineHelpText>The previous Recruiting Opportunity owner.</inlineHelpText>
    <label>Previous Recruiting Opportunity Owner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>User.FirstName</field>
            <operation>notContain</operation>
            <value>Savvy</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>PriorRecruitingOwner</relationshipName>
    <type>Lookup</type>
</CustomField>