salesforce/force-app/main/default/objects/Opportunity/fields/utm_campaign__c.field-meta.xml
<CustomField>
    <fullName>utm_campaign__c</fullName>
    <description>Marketing UTM Campaign</description>
    <label>UTM Campaign</label>
    <length>50</length>
    <type>Text</type>
</CustomField>