salesforce/force-app/main/default/objects/Opportunity/fields/utm_content__c.field-meta.xml
<CustomField>
    <fullName>utm_content__c</fullName>
    <description>Marketing UTM Content</description>
    <label>UTM Content</label>
    <length>50</length>
    <type>Text</type>
</CustomField>