salesforce/force-app/main/default/objects/Opportunity/fields/utm_medium__c.field-meta.xml
<CustomField>
    <fullName>utm_medium__c</fullName>
    <description>Marketing UTM Medium</description>
    <label>UTM Medium</label>
    <length>50</length>
    <type>Text</type>
</CustomField>