salesforce/force-app/main/default/objects/Opportunity/fields/utm_source__c.field-meta.xml
<CustomField>
    <fullName>utm_source__c</fullName>
    <description>Marketing UTM Source</description>
    <label>UTM Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>