salesforce/force-app/main/default/objects/Opportunity/fields/utm_term__c.field-meta.xml
<CustomField>
    <fullName>utm_term__c</fullName>
    <description>Marketing UTM</description>
    <label>UTM Term</label>
    <length>50</length>
    <type>Text</type>
</CustomField>