salesforce/force-app/main/default/objects/Opportunity/fields/Verbal_Commit__c.field-meta.xml
<CustomField>
    <fullName>Verbal_Commit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the deal has a verbal commit but is not yet signed?</description>
    <label>Verbal Commit</label>
    <type>Checkbox</type>
</CustomField>