salesforce/force-app/main/default/objects/Opportunity/fields/Was_Re_Engaged__c.field-meta.xml
<CustomField>
    <fullName>Was_Re_Engaged__c</fullName>
    <description>Indicates whether this advisor has ever had a Re-Engagement Opportunity created (any stage). Based on Account-level Total_Re_Engagement_Opps__c rollup.</description>
    <formula>IF(Account.Total_Re_Engagement_Opps__c &gt; 0, &quot;Yes&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Yes = this advisor was previously re-engaged. No = first-time Closed Lost with no prior re-engagement attempts.</inlineHelpText>
    <label>Was Re-Engaged</label>
    <type>Text</type>
</CustomField>