salesforce/force-app/main/default/objects/Opportunity/fields/WBR_Week__c.field-meta.xml
<CustomField>
    <fullName>WBR_Week__c</fullName>
    <formula>Start_of_Week__c + 6</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WBR Week</label>
    <type>Date</type>
</CustomField>