salesforce/force-app/main/default/objects/Opportunity/fields/Week_Joined__c.field-meta.xml
<CustomField>
    <fullName>Week_Joined__c</fullName>
    <formula>Case(StageName,&quot;Joined&quot;, 
Advisor_Join_Date__c - MOD(Advisor_Join_Date__c - DATE(1900, 1, 7), 7)
,NULL)</formula>
    <label>Week Joined</label>
    <type>Date</type>
</CustomField>