salesforce/force-app/main/default/objects/Opportunity/fields/Won_Opps_in_Account__c.field-meta.xml
<CustomField>
    <fullName>Won_Opps_in_Account__c</fullName>
    <formula>Account.Won_Opportunities__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Won Opps in Account</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>