salesforce/force-app/main/default/objects/Opportunity/fields/Year_1_Incentive__c.field-meta.xml
<CustomField>
    <fullName>Year_1_Incentive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the advisor receive an enhanced split rate for the first year?</description>
    <inlineHelpText>Does the advisor receive an enhanced split rate for the first year?</inlineHelpText>
    <label>Year 1 Incentive?</label>
    <type>Checkbox</type>
</CustomField>