salesforce/force-app/main/default/objects/Opportunity/fields/Year_1_Incentive_Duration_Months__c.field-meta.xml
<CustomField>
    <fullName>Year_1_Incentive_Duration_Months__c</fullName>
    <description>How many months the Year 1 incentive rate applies (typically 12).</description>
    <inlineHelpText>How many months the Year 1 incentive rate applies (typically 12).</inlineHelpText>
    <label>Year 1 Incentive Duration (Months)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>