salesforce/force-app/main/default/objects/Opportunity/fields/Year_1_Incentive_Rate__c.field-meta.xml
<CustomField>
    <fullName>Year_1_Incentive_Rate__c</fullName>
    <description>The enhanced split percentage during the Year 1 incentive period.</description>
    <inlineHelpText>The enhanced split percentage during the Year 1 incentive period.</inlineHelpText>
    <label>Year 1 Incentive Rate</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>