salesforce/force-app/main/default/objects/Opportunity/fields/Years_as_a_Rep__c.field-meta.xml
<CustomField>
    <fullName>Years_as_a_Rep__c</fullName>
    <description>The number this FA has served as an FA.</description>
    <label>Years as a Rep</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>