salesforce/force-app/main/default/objects/Opportunity/fields/Years_at_Firm__c.field-meta.xml
<CustomField>
    <fullName>Years_at_Firm__c</fullName>
    <description>The number of years this Prospect has been at their firm</description>
    <label>Years at Firm</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>