salesforce/force-app/main/default/objects/Opportunity/recordTypes/M_A.recordType-meta.xml
<RecordType>
    <fullName>M_A</fullName>
    <active>false</active>
    <businessProcess>M%26A</businessProcess>
    <label>M&amp;A</label>
</RecordType>