salesforce/force-app/main/default/objects/Opportunity/recordTypes/Re_Engagement.recordType-meta.xml
<RecordType>
    <fullName>Re_Engagement</fullName>
    <active>true</active>
    <businessProcess>ReEngagement</businessProcess>
    <label>Re-Engagement</label>
</RecordType>