salesforce/force-app/main/default/objects/Opportunity/recordTypes/Recruiting.recordType-meta.xml
<RecordType>
    <fullName>Recruiting</fullName>
    <active>true</active>
    <businessProcess>Recruiting</businessProcess>
    <label>Recruiting</label>
</RecordType>