salesforce/force-app/main/default/objects/Opportunity/validationRules/Closed_Lost_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Lost_Validation</fullName>
    <active>true</active>
    <description>Require the user go through the Closed Lost flow when marking an opportunity closed lost.</description>
    <errorConditionFormula>AND( NOT(Closed_Lost_Checkbox__c),
     ISPICKVAL(StageName, &quot;Closed Lost&quot;)
     ,RecordType.Id=&apos;012Dn000000mrO3IAI&apos;
)
/*
Update 7/21/25: This is now controlled by the Closed Lost screen flow. This flow checks a checkbox and which THEN allows the Opportunity to be Closed Lost. Otherwise, there is no way to close an opportunity (e.g. through the timeline/chevron).
*/</errorConditionFormula>
    <errorMessage>Please use the Close Opportunity button (top-right) to close an opportunity.</errorMessage>
</ValidationRule>