salesforce/force-app/main/default/objects/Opportunity/validationRules/Earliest_Anticipated_Start_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Earliest_Anticipated_Start_Date_Required</fullName>
    <active>true</active>
    <description>The earliest anticipated start date is required at the negotiation stage of the Opportunity.</description>
    <errorConditionFormula>AND(
     OR(
        ISPICKVAL(StageName,&quot;Negotiating&quot;),
        ISPICKVAL(StageName,&quot;Signed&quot;)),
     ISBLANK( Earliest_Anticipated_Start_Date__c )
   )</errorConditionFormula>
    <errorDisplayField>Earliest_Anticipated_Start_Date__c</errorDisplayField>
    <errorMessage>To enter the Negotiating stage, an Earliest Anticipated Start Date is required.</errorMessage>
</ValidationRule>