salesforce/force-app/main/default/objects/Opportunity/validationRules/Equity_Kicker_Information_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Equity_Kicker_Information_Required</fullName>
    <active>true</active>
    <description>If the Equity Kicker Checkbox is checked, then the other fields are required.</description>
    <errorConditionFormula>And(
         Equity_Kicker__c ,
     OR(
          ISBLANK(  Equity_Kicker_ARR_Minimum__c ),
          ISBLANK(  Equity_Kicker_Value__c  )

     ),
     OR(
          ISPICKVAL( StageName, &quot;Joined&quot;),
          ISPICKVAL( StageName, &quot;Signed&quot;)
     )
)</errorConditionFormula>
    <errorMessage>If there is an Equity Kicker as part of the advisor agreement, all of the details must be populated.</errorMessage>
</ValidationRule>